objects/BMCServiceDesk__BMC_Document__c.object
<CustomObject>
    <description>BMC_Document: CMDB Class that stores all documents related to an IT infrastructure in the CMDB. It categorizes any type of documented information in your IT environment, and includes attributes that specify various properties of the documentation. It also includes an attachment field for storing documentation. This class is included in the Common Data Model because ITIL defines documentation as one of the six elements that compose a CMDB. Therefore, if you have documents that are critical to your configuration and you want to track them as CIs, this class enables you to do so. For example, you can use the BMC_Document class to include a disaster recovery plan in an impact model. The BMC_Document class can store these reports, as well as the author&apos;s name and the creation date. Additionally, the manager can attach the report using the DocumentAttachment attribute.  This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Author__c</fullName>
        <label>Author</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentSize__c</fullName>
        <label>Document Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentStatus__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DocumentType__c</fullName>
        <label>Document Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FileName__c</fullName>
        <label>File Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Keywords__c</fullName>
        <label>Keywords</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Locale__c</fullName>
        <label>Locale</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>BMC_Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__start_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>BMCServiceDesk__StartDate__c  &gt;  BMCServiceDesk__EndDate__c</errorConditionFormula>
        <errorMessage>Start date should be lesser than End date</errorMessage>
    </validationRules>
</CustomObject>